--- a/style.css
+++ b/style.css
@@ -159,3 +159,41 @@ a {
   background-color: none;
   color: white;
 }
+
+.gifek {
+  width: 250px;
+  height: 250px;
+  background-color: red;
+  position: relative;
+  animation-name: example;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes example {
+  0% {
+    background-color: red;
+    left: 0px;
+    top: 0px;
+  }
+  25% {
+    background-color: yellow;
+    left: 90%;
+    top: 0px;
+  }
+  50% {
+    background-color: blue;
+    left: 0px;
+    top: 0px;
+  }
+  75% {
+    background-color: green;
+    left: 90%;
+    top: 0px;
+  }
+  100% {
+    background-color: red;
+    left: 0px;
+    top: 0px;
+  }
+}
